--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "aws-amplify": "^4.2.9",
     "jsonwebtoken": "^8.5.1",
     "next": "11.1.2",
-    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.5",
