--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.0.0"
+    "swr": "^1.0.0",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.5",
     "@types/react": "17.0.20",
+    "@types/url-join": "^4.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.2"
